syntax = "proto3";

package customer;
option go_package = "api/pb";
message FindCustomerByIDRequest{
  string id = 1;
}

message Customer{
  string id = 1;
  string name = 2;
}
message AddCustomerResponse { Customer customer = 1; }
message GetAllCustomersRequest{}
message GetAllCustomersResponse { repeated Customer customers = 1; }
message FindCustomerByIDResponse { Customer customer = 1;  }

service CustomerService {
  rpc AddCustomer(Customer) returns (AddCustomerResponse);
  rpc FindCustomerByID (FindCustomerByIDRequest) returns (FindCustomerByIDResponse);
  rpc GetAllCustomers (GetAllCustomersRequest) returns ( GetAllCustomersResponse);
}